--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,12 @@
   <body>
     <div class="container">
       <h1>Hello, world!</h1>
+
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+      </div>
+
     </div>
   </body>
 </html>
