Successfully extending vendor sass files

--- a/src/app.html
+++ b/src/app.html
@@ -9,9 +9,14 @@
     <div class="container">
       <h1>Hello, world!</h1>
 
-      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <div class="alert alert-warning alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <strong>Holy guacamole!</strong> This is a native <strong>Bootstrap</strong> alert
+      </div>
+
+      <div class="alert custom-alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Holy guacamole!</strong> This is a <strong>SASS</strong> extended <strong>Bootsrap</strong> alert
       </div>
 
     </div>
